k8s/emp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emp-deployment
  namespace: developer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emp
  template:
    metadata:
      labels:
        app: emp
    spec:
      containers:
        - name: emp
          image: observabilityacr9425.azurecr.io/empdemo:latest
          ports:
            - containerPort: 8080
