k8s/emp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: emp-service
  namespace: developer
spec:
  selector:
    app: emp
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
